# SProject

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conan_profile_linux.txt  conan_profile_win.txt  conanfile.txt  docker-compose.yml
App/: App.cpp  App.h  AppOptions.cpp  AppOptions.h  CMakeLists.txt  DB.cpp  DB.h  Device.cpp  Device.h  Mqtt.cpp  Mqtt.h  main.cpp
Docker_DB/: init.sql
Test/: devicesIds.json
